--- a/src/postorius/locale/de/LC_MESSAGES/django.po
+++ b/src/postorius/locale/de/LC_MESSAGES/django.po
@@ -1,5 +1,5 @@
 # Postorius translation German
-# Copyright (C) 2017 Manfred Dohmen
+# Copyright (C) 2017-2019 by the Free Software Foundation, Inc.
 # This file is distributed under the same license as the Postorius package.
 # Manfred Dohmen <manfred.dohmen@gmail.com>, 2017.
 #
